Tried to add a premake, failed miserably (not really, but not oworking atm

--- a/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj
+++ b/CapNCrunchEngineSCHOOL/CapNCrunchEngineSCHOOL.vcxproj
@@ -1,14 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
-    <ProjectConfiguration Include="Debug|Win32">
-      <Configuration>Debug</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
-    <ProjectConfiguration Include="Release|Win32">
-      <Configuration>Release</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
@@ -17,51 +9,38 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="Distribution|x64">
+      <Configuration>Distribution</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>16.0</VCProjectVersion>
+    <ProjectGuid>{E8AC4066-D4A6-69B8-BD13-00C9A9ACCF24}</ProjectGuid>
+    <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{45059021-f36e-454f-982f-7d7fd2e73dec}</ProjectGuid>
     <RootNamespace>CapNCrunchEngineSCHOOL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v143</PlatformToolset>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Distribution|x64'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
+    <UseDebugLibraries>false</UseDebugLibraries>
+    <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
-  </ImportGroup>
-  <ImportGroup Label="Shared">
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -69,121 +48,186 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Distribution|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\bin\Debug-windows-x86_64\CapNCrunchEngineSCHOOL\</OutDir>
+    <IntDir>..\bin-int\Debug-windows-x86_64\CapNCrunchEngineSCHOOL\</IntDir>
+    <TargetName>CapNCrunchEngineSCHOOL_Debug</TargetName>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\bin\Release-windows-x86_64\CapNCrunchEngineSCHOOL\</OutDir>
+    <IntDir>..\bin-int\Release-windows-x86_64\CapNCrunchEngineSCHOOL\</IntDir>
+    <TargetName>CapNCrunchEngineSCHOOL_Release</TargetName>
+    <TargetExt>.exe</TargetExt>
   </PropertyGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-  </ItemDefinitionGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Distribution|x64'">
+    <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\bin\Distribution-windows-x86_64\CapNCrunchEngineSCHOOL\</OutDir>
+    <IntDir>..\bin-int\Distribution-windows-x86_64\CapNCrunchEngineSCHOOL\</IntDir>
+    <TargetName>CapNCrunchEngineSCHOOL_Distribution</TargetName>
+    <TargetExt>.exe</TargetExt>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../external/directxtex;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <Optimization>Disabled</Optimization>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <FxCompile>
-      <ObjectFileOutput>$(OutputPath)%(Filename).cso</ObjectFileOutput>
-    </FxCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
+      <PreprocessorDefinitions>_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../external/directxtex;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MinimalRebuild>false</MinimalRebuild>
+      <StringPooling>true</StringPooling>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
-    <FxCompile>
-      <ObjectFileOutput>$(OutputPath)%(Filename).cso</ObjectFileOutput>
-    </FxCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Distribution|x64'">
+    <ClCompile>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <WarningLevel>Level3</WarningLevel>
+      <PreprocessorDefinitions>_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <Optimization>Full</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <MinimalRebuild>false</MinimalRebuild>
+      <StringPooling>true</StringPooling>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+    </ClCompile>
+    <Link>
+      <SubSystem>Windows</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader11.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="GraphicsEngine.cpp" />
-    <ClCompile Include="Light.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Primitive.cpp" />
-    <ClCompile Include="RenderTarget.h" />
-    <ClCompile Include="Texture.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader11.h" />
+    <ClInclude Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader12.h" />
+    <ClInclude Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader9.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\ps1D.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\ps1Darray.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\ps2D.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\ps2Darray.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\ps3D.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\psCube.h" />
+    <ClInclude Include="..\external\directxtex\DDSView\shaders\vs.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\BC.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\BCDirectCompute.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\DDS.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\DirectXTex.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\DirectXTexP.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\d3dx12.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\filters.h" />
+    <ClInclude Include="..\external\directxtex\DirectXTex\scoped.h" />
+    <ClInclude Include="..\external\directxtex\ScreenGrab\ScreenGrab11.h" />
+    <ClInclude Include="..\external\directxtex\ScreenGrab\ScreenGrab12.h" />
+    <ClInclude Include="..\external\directxtex\ScreenGrab\ScreenGrab9.h" />
+    <ClInclude Include="..\external\directxtex\WICTextureLoader\WICTextureLoader11.h" />
+    <ClInclude Include="..\external\directxtex\WICTextureLoader\WICTextureLoader12.h" />
+    <ClInclude Include="..\external\directxtex\WICTextureLoader\WICTextureLoader9.h" />
+    <ClInclude Include="CU\Input.h" />
+    <ClInclude Include="CU\Matrix3x3.hpp" />
+    <ClInclude Include="CU\Matrix4x4.hpp" />
+    <ClInclude Include="CU\Quaternion.h" />
+    <ClInclude Include="CU\Random.hpp" />
+    <ClInclude Include="CU\Timer.h" />
+    <ClInclude Include="CU\UtilityFunctions.hpp" />
+    <ClInclude Include="CU\Vector2.hpp" />
+    <ClInclude Include="CU\Vector3.hpp" />
+    <ClInclude Include="CU\Vector4.hpp" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GraphicsEngine.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Primitive.h" />
-    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureTypes.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="ColorPS.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    <ClCompile Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader11.cpp" />
+    <ClCompile Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader12.cpp" />
+    <ClCompile Include="..\external\directxtex\DDSTextureLoader\DDSTextureLoader9.cpp" />
+    <ClCompile Include="..\external\directxtex\DDSView\ddsview.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\BC.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\BC4BC5.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\BC6HBC7.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\BCDirectCompute.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexCompress.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexCompressGPU.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexConvert.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexD3D11.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexD3D12.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexDDS.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexFlipRotate.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexHDR.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexImage.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexMipmaps.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexMisc.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexNormalMaps.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexPMAlpha.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexResize.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexTGA.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexUtil.cpp" />
+    <ClCompile Include="..\external\directxtex\DirectXTex\DirectXTexWIC.cpp" />
+    <ClCompile Include="..\external\directxtex\ScreenGrab\ScreenGrab11.cpp" />
+    <ClCompile Include="..\external\directxtex\ScreenGrab\ScreenGrab12.cpp" />
+    <ClCompile Include="..\external\directxtex\ScreenGrab\ScreenGrab9.cpp" />
+    <ClCompile Include="..\external\directxtex\Texassemble\AnimatedGif.cpp" />
+    <ClCompile Include="..\external\directxtex\Texassemble\texassemble.cpp" />
+    <ClCompile Include="..\external\directxtex\Texconv\ExtendedBMP.cpp" />
+    <ClCompile Include="..\external\directxtex\Texconv\PortablePixMap.cpp" />
+    <ClCompile Include="..\external\directxtex\Texconv\texconv.cpp" />
+    <ClCompile Include="..\external\directxtex\Texdiag\texdiag.cpp" />
+    <ClCompile Include="..\external\directxtex\WICTextureLoader\WICTextureLoader11.cpp" />
+    <ClCompile Include="..\external\directxtex\WICTextureLoader\WICTextureLoader12.cpp" />
+    <ClCompile Include="..\external\directxtex\WICTextureLoader\WICTextureLoader9.cpp" />
+    <ClCompile Include="CU\Input.cpp" />
+    <ClCompile Include="CU\Random.cpp" />
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GraphicsEngine.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\external\directxtex\DirectXTex\Shaders\BC6HEncode.hlsl" />
+    <FxCompile Include="..\external\directxtex\DirectXTex\Shaders\BC7Encode.hlsl" />
+    <FxCompile Include="color_PS.hlsl">
+      <ShaderType>Pixel</ShaderType>
+      <ShaderModel>5.0</ShaderModel>
     </FxCompile>
-    <FxCompile Include="ColorVS.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">5.0</ShaderModel>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">5.0</ShaderModel>
+    <FxCompile Include="color_VS.hlsl">
+      <ShaderType>Vertex</ShaderType>
+      <ShaderModel>5.0</ShaderModel>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
